@@ -1,5 +1,11 @@
 2002-10-25  Stephane Carrez  <stcarrez@nerim.fr>
 
+	Fix PR gdb/787
+	* tuiWin.c (ACS_LRCORNER, ACS_LLCORNER, ACS_ULCORNER, ACS_URCORNER,
+	ACS_HLINE, ACS_VLINE): Define if they don't exist.
+
+2002-10-25  Stephane Carrez  <stcarrez@nerim.fr>
+
 	Fix PR gdb/478
 	* tuiIO.c (tui_initialize_io): Use setvbuf since this is portable.
 
